<resources>
    <string name="app_name">KO</string>

    <string name="btn_mode_time_plus_points">Время + баллы</string>
    <string name="btn_mode_time">Время</string>
    <string name="btn_mode_result_plus_points">Результат + баллы</string>
    <string name="btn_mode_result">Результат</string>
    <string name="btn_mode_passnpass">Прошел/Не прошел</string>
    <string name="btn_mode_moose_races">Лосинные бега</string>

    <string name="label_stage">Этап</string>
    <string name="label_competitor_number">Номер участника</string>
    <string name="label_team_number">Номер команды</string>
    <string name="label_all_participants">Всего</string>
    <string name="button_start_stop_time">Старт</string>
    <string name="button_finish">Записать результат</string>
    <string name="button_save_time">Записать время</string>
    <string name="label_points">Баллы</string>
    <string name="label_time">Время</string>
    <string name="btnNext">Далее</string>
    <string name="label_result">Результат</string>
    <string name="line_START">СТАРТ</string>
    <string name="line_STOP">СТОП</string>

    <string name="results_filename">results.txt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StageAsExtra">STAGE</string>
    <string name="tvMinutes">Минуты</string>
    <string name="tvSeconds">Секунды</string>
    <string name="btnReset">Сброс</string>
    <string name="btnOk">Ок</string>
    <string name="timer_time">TIME</string>
    <string name="without_result">WITHOUT_RESULT</string>
    <string name="with_result">WITH_RESULT</string>
    <string name="set_timer">Введите время</string>
    <string name="competitor_pass">Участник прошел</string>
    <string name="competitor_not_pass">Участник не прошел</string>
    <string name="competitor_fails">Не прошел</string>
    <string name="btn_settings">Настройки</string>
    <string name="settings">Настройки</string>
</resources>
