<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mb.ko.Activities.TimerActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_stage"
                    android:id="@+id/textView3"
                    android:layout_gravity="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvStage"
                    android:layout_gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_membership_number"
                    android:id="@+id/textView4"
                    android:layout_gravity="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCompetitorNumber"
                    android:layout_gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_all_participants"
                    android:id="@+id/textView5"
                    android:layout_gravity="center" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:id="@+id/textView8"
                    android:layout_gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/tvMinutes"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/etTimerMinutes"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2" />
            </LinearLayout>
            <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
                android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/tvSeconds"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/etTimerSeconds"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="2" />
        </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_start_stop_time"
                android:id="@+id/btnTimerStart"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:text="@string/btnNext"
            android:id="@+id/btnFinish"
            android:layout_gravity="center"
            android:background="@color/colorButtonBackground" />

    </LinearLayout>

</RelativeLayout>
