<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mb.ko.Fragments.PassFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_line_thickness"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/competitor_pass"
                    android:layout_weight="1"
                    android:id="@+id/rbtn_pass" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/competitor_not_pass"
                    android:id="@+id/rbtn_not_pass"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </RadioGroup>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_line_thickness"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorSeparator" />



        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_line_thickness"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorSeparator" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_line_thickness"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btnReset" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />


            <mb.ko.Timer
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="00:00"
                android:id="@+id/timer"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btnStartStop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_start_stop_time" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
